--- a/recruit-gui/src/app/statistics/statistics.component.css
+++ b/recruit-gui/src/app/statistics/statistics.component.css
@@ -36,7 +36,7 @@ chart-wrapper-page{
 }
 
 .stat-btn{
-	width:340px;
+	width:260px;
 	margin-bottom:10px;
 }
 
@@ -77,6 +77,7 @@ chart-wrapper-page{
 
 .recruiter-stats{
 	margin-top:20px;
+	min-width:300px;
 	overflow:auto;
 	height:265px;
 	border:1px solid black;
@@ -91,7 +92,6 @@ chart-wrapper-page{
 
 .stat-canvas{
 	width:40%;
-	height:400px;
 	min-width:300px;
 	margin:20px;
 	float:left;
