--- a/recruit-gui/src/app/statistics/statistics.component.css
+++ b/recruit-gui/src/app/statistics/statistics.component.css
@@ -15,7 +15,7 @@ chart-wrapper-page{
 	width:90%;
 }
 .chart-wrapper{
-	float:left;
+	/*float:left;*/
 	/*width:45%;*/
 	min-width:45%;
 	margin:20px;
@@ -56,7 +56,8 @@ chart-wrapper-page{
 
 .login-table-view table thead tr th{
 	background:#6c757d;
-	width:100%;
+	text-align:left;
+	padding:10px;
 }
 
 .login-table-view table tbody tr{
@@ -66,12 +67,11 @@ chart-wrapper-page{
 .login-table-view table tbody tr:hover{
 	cursor:pointer;
 	background:green;
-	padding:5px;
+	padding:10px;
 }
 
 .login-table-view table tbody tr td{
 	cursor:pointer;
-	width:100%;	
 	padding:5px;
 }
 
@@ -91,9 +91,18 @@ chart-wrapper-page{
 }
 
 .stat-canvas{
-	width:40%;
+	width:50%;
 	min-width:350px;
 	float:left;
 	padding:5px;
 	margin-bottom:40px;
+}
+
+.statChartDiv{
+	width:90%;
+}
+
+.listing-country{
+	padding-left:5px;
+	margin-left:5px;
 }
