--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -28,7 +28,7 @@
 		</ul>
 		
 		<!--  Define charts -->
-		<div class="border-top">
+		<div >
 			<div class="stat-canvas">
 				<!-- Logins -->
 				<div *ngIf="showStatsLogins">
