--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -163,4 +163,18 @@ dialog {
 	background:grey;
 }
 
+.btn-main-bar{
+ 	margin-top:15px;
+	min-width:150px;
+	margin-left:10px;
+}
+
+.buttons-icon-mobile {
+    width: 49%;
+    margin-top: 10px;
+    /*margin-right: 1%;*/
+    margin-left: 1%;
+    margin-bottom: 0px;
+}
+
 /*END DIALOG CSS*/
