--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -318,3 +318,9 @@ textarea {
 .sugg-srch-job-title-mobile{
 	min-width:0px;
 }
+
+.mobile-search-box{
+	margin-left:1%;
+	margin-right:1%;
+	width:98%;
+}
