--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -27,6 +27,8 @@
 
 .action-buttons{
 	text-align:right;
+	margin-right:10px;
+	margin-left:10px;
 }
 
 .action-btn{
@@ -78,6 +80,7 @@
  
  .add-skill-btn{
  	margin-left:5px;
+ 	margin-top:5px;
  }
  
  .candidate-title{
@@ -221,7 +224,7 @@ td{
 	margin-top:5px;
 	
 }
-
+/*
 .left-box-title{
 	min-width:300px;
 	margin-bottom:30px;
@@ -229,12 +232,9 @@ td{
 	color:#6A5ACD;
 	font-weight:bold;
 }
+*/
 
-.left-box{
-	min-width:300px;
-	margin-bottom:30px;
-	max-width:300px;
-}
+
 
 .left-box-body{
 	padding:5px;
@@ -299,6 +299,75 @@ td{
 	color:#6A5ACD;
 }
 
+.mobile-listing-view-title{
+	text-align:center;
+}
+
 .listing-view-div{
 	margin-top:10px;
+}
+
+
+
+.pos-desc-panel{
+	float:left;
+	width:75%;
+}
+
+.desc-body{
+	float:left;
+	padding:5px;
+	padding-left:20px;
+	min-width:310px;
+	max-width:72%;
+}
+
+.mobile-desc-body{
+	min-width:98%;
+	padding-right:10px;
+	padding-left:10px;
+}
+
+.left-box-container{
+	float:left; 
+	width:100%; 
+	min-width:320px; 
+	max-width:360px; 
+	margin-top:20px;
+	padding-left:20px;
+}
+
+.mobile-left-pane-container{
+	min-width:98%; 
+	max-width:98%;
+	padding-left:10px;
+}
+
+.left-box{
+	min-width:300px;
+	margin-bottom:30px;
+	max-width:300px;
+}
+
+.mobile-left-box{
+	min-width:98%;
+	margin-bottom:30px;
+	max-width:98%;
+	margin-left:5px;
+	margin-right:0px;
+}
+
+.btnRight{
+	margin-top:20px;
+    margin-bottom:20px;
+    margin-right:10px;
+    min-width:100px;
+}
+
+.buttons-icon-mobile{
+	width:48%;
+	margin-top: 10px;
+    margin-right:1%;
+    margin-left:1%;
+    margin-bottom:0px;
 }
